--- a/index.html
+++ b/index.html
@@ -1,44 +1,133 @@
 <!DOCTYPE html>
 <html lang="ru">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>VampiresWedding</title>
     <link rel="stylesheet" href="./stylesheets/style.css" />
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="firstpage">
-        <div class="svecha">
-            <img class="ogonki1"><img src="images/ogonki.png" alt="">
-            <img class="svecha1"><img src="images/svechi.png" alt="">
-        </div>
-     
-        <div class="mirror">
-            <p>Vampires Wedding</p>
-        </div>
-      
-        <div class="svecha">
-            <img class="ogonki1"><img src="images/ogonki.png">
-            <img class="svecha1"><img src="images/svechi.png">
-        </div>
+      <div class="svecha">
+        <img class="ogonki1" /><img src="images/ogonki.png" alt="" />
+        <img class="svecha1" /><img src="images/svechi.png" alt="" />
+      </div>
+
+      <div class="mirror">
+        <span class="text">Vampires Wedding</span>
+      </div>
+
+      <div class="svecha">
+        <img class="ogonki1" />
+        <img src="images/ogonki.png" />
+        <img class="svecha1" />
+        <img src="images/svechi.png" />
+      </div>
     </div>
     <div class="secondpage">
-        <img class="vbox"><img src="images/Vector 421.png">
-        <div class="pictures">
-            <img class="banty"><img src="images/Group 376.png">
-            <img class="rings1"><img src="images/Group 377.svg">
-            <img class="rings2>"><img src="images/Group 378.svg">
-            <img class="lepestki"> <img src="images/Group 380.svg">
-
+      <div class="pictures">
+        <div class="banty">
+          <img src="images/bant.png" />
+          <img src="images/bant.png" />
+          <img src="images/bant.png" />
+          <img src="images/bant.png" />
+          <img src="images/bant.png" />
+          <img src="images/bant.png" />
         </div>
+        <div class="rings">
+          <img class="ring1" src="images/ring1.png" />
+          <img class="ring2" src="images/ring2.png" />
+        </div>
+        <div class="pictures2"></div>
+        <div class="lepestki">
+          <div class="lepestki1">
+            <img src="images/lepestki.png" />
+            <img src="images/lepestki.png" />
+            <img src="images/lepestki.png" />
+          </div>
+          <div class="lepestki2">
+            <img src="images/lepestki.png" />
+            <img src="images/lepestki.png" />
+            <img src="images/lepestki.png" />
+          </div>
+          <div class="lepestki3">
+            <img src="images/lepestki.png" />
+            <img src="images/lepestki.png" />
+            <img src="images/lepestki.png" />
+          </div>
+        </div>
+      </div>
     </div>
     <div class="text">
-        <p1>VAMPIRES WEDDING</p1>
-        <p2>AGENCY</p2>
+      <p1>VAMPIRES WEDDING</p1>
+      <p2>AGENCY</p2>
     </div>
 
-</body>
+    <div class="pictures3">
+      <div class="mouses">
+        <div class="mouses1">
+          <img src="images/mouse.png" />
+          <img src="images/mouse.png" />
+          <img src="images/mouse.png" />
+        </div>
+        <div class="mouse">
+          <img src="images/mouse.png" />
+        </div>
+        <div class="mouses2">
+          <img src="images/mouse.png" />
+          <img src="images/mouse.png" />
+          <img src="images/mouse.png" />
+        </div>
+      </div>
+      <div class="blood">
+        <div class="blood_pic1">
+          <img src="images/blood.png" />
+          <img src="images/blood.png" />
+          <img src="images/blood.png" />
+          <div class="blood_pic2">
+            <img src="images/blood.png" />
+            <img src="images/blood.png" />
+            <img src="images/blood.png" />
+            <div class="blood_pic3">
+              <img src="images/blood.png" />
+              <img src="images/blood.png" />
+              <img src="images/blood.png" />
+              <div class="blood_pic4">
+                <img src="images/blood.png" />
+                <img src="images/blood.png" />
+                <img src="images/blood.png" />
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="chelusti">
+          <div class="chelusti1">
+            <img src="images/chelust.png" />
+            <img src="images/chelust.png" />
+            <img src="images/chelust.png" />
+          </div>
+          <div class="chelusti2">
+            <img src="images/chelust.png" />
+            <img src="images/chelust.png" />
+            <img src="images/chelust.png" />
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="begushaya_stroka">
+      <div id="rectangle">
+        <p class="texxt">VAMPIRES WEDDING VAMPIRES WEDDING</p>
+      </div>
 
+      <div class="bar">
+        <img class="bokal" src="images/bokal.png" />
+        <div class="tort">
+          <img class="tort1" src="images/tortend.png" />
+          <img class="tort2" src="images/tortstart.png" />
+        </div>
+        <img class="bokal" src="images/bokal.png" />
+      </div>
+    </div>
+  </body>
 </html>
