--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <body>
     <div class="firstpage">
       <div class="svecha">
-        <img class="ogonki1" /><img src="images/ogonki.png" alt="" />
-        <img class="svecha1" /><img src="images/svechi.png" alt="" />
+        <img class="ogonki1" img src="images/ogonki.png" alt="" />
+        <img class="svecha1" img src="images/svechi.png" alt="" />
       </div>
 
       <div class="mirror">
@@ -19,115 +19,40 @@
       </div>
 
       <div class="svecha">
-        <img class="ogonki1" />
-        <img src="images/ogonki.png" />
-        <img class="svecha1" />
-        <img src="images/svechi.png" />
+        <img class="ogonki1" img src="images/ogonki.png" alt="" />
+        <img class="svecha1" img src="images/svechi.png" alt="" />
       </div>
     </div>
-    <div class="secondpage">
-      <div class="pictures">
-        <div class="banty">
-          <img src="images/bant.png" />
-          <img src="images/bant.png" />
-          <img src="images/bant.png" />
-          <img src="images/bant.png" />
-          <img src="images/bant.png" />
-          <img src="images/bant.png" />
-        </div>
-        <div class="rings">
-          <img class="ring1" src="images/ring1.png" />
-          <img class="ring2" src="images/ring2.png" />
-        </div>
-        <div class="pictures2"></div>
-        <div class="lepestki">
-          <div class="lepestki1">
-            <img src="images/lepestki.png" />
-            <img src="images/lepestki.png" />
-            <img src="images/lepestki.png" />
-          </div>
-          <div class="lepestki2">
-            <img src="images/lepestki.png" />
-            <img src="images/lepestki.png" />
-            <img src="images/lepestki.png" />
-          </div>
-          <div class="lepestki3">
-            <img src="images/lepestki.png" />
-            <img src="images/lepestki.png" />
-            <img src="images/lepestki.png" />
-          </div>
-        </div>
-      </div>
+    <div classs="secondpage">
+      <img class="second" src="images/Group 412.png" />
     </div>
+
     <div class="text">
       <p1>VAMPIRES WEDDING</p1>
       <p2>AGENCY</p2>
     </div>
 
     <div class="pictures3">
-      <div class="mouses">
-        <div class="mouses1">
-          <img src="images/mouse.png" />
-          <img src="images/mouse.png" />
-          <img src="images/mouse.png" />
-        </div>
-        <div class="mouse">
-          <img src="images/mouse.png" />
-        </div>
-        <div class="mouses2">
-          <img src="images/mouse.png" />
-          <img src="images/mouse.png" />
-          <img src="images/mouse.png" />
-        </div>
-      </div>
-      <div class="blood">
-        <div class="blood_pic1">
-          <img src="images/blood.png" />
-          <img src="images/blood.png" />
-          <img src="images/blood.png" />
-          <div class="blood_pic2">
-            <img src="images/blood.png" />
-            <img src="images/blood.png" />
-            <img src="images/blood.png" />
-            <div class="blood_pic3">
-              <img src="images/blood.png" />
-              <img src="images/blood.png" />
-              <img src="images/blood.png" />
-              <div class="blood_pic4">
-                <img src="images/blood.png" />
-                <img src="images/blood.png" />
-                <img src="images/blood.png" />
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="chelusti">
-          <div class="chelusti1">
-            <img src="images/chelust.png" />
-            <img src="images/chelust.png" />
-            <img src="images/chelust.png" />
-          </div>
-          <div class="chelusti2">
-            <img src="images/chelust.png" />
-            <img src="images/chelust.png" />
-            <img src="images/chelust.png" />
-          </div>
-        </div>
-      </div>
+      <img class="pct" img src="images/Group 416.png" />
     </div>
+
     <div class="begushaya_stroka">
       <div id="rectangle">
         <p class="texxt">VAMPIRES WEDDING VAMPIRES WEDDING</p>
       </div>
 
       <div class="bar">
-        <img class="bokal" src="images/bokal.png" />
+        <img id="bokal" src="images/bokal.png" />
         <div class="tort">
-          <img class="tort1" src="images/tortend.png" />
-          <img class="tort2" src="images/tortstart.png" />
+          <img id="tort1" src="images/tortend.png" />
+          <img id="tort2" src="images/tortstart.png" />
         </div>
-        <img class="bokal" src="images/bokal.png" />
+        <img id="bokal" src="images/bokal.png" />
       </div>
+    </div>
+    <div class="podval">
+      <img class="logo" src="images/Group.png" />
+      <p>Ахапкина Алена</p>
     </div>
   </body>
 </html>
